@@ -617,71 +617,39 @@ void NetworkStorageSession::registerCookieChangeListenersIfNecessary()
 
     m_didRegisterCookieListeners = true;
 
-    if ([nsCookieStorage() respondsToSelector:@selector(_setCookiesChangedHandler:onQueue:)]) {
-        [nsCookieStorage() _setCookiesChangedHandler:^(NSArray<NSHTTPCookie*>* addedCookies, NSString* domainForChangedCookie) {
-            String host = domainForChangedCookie;
-            auto it = m_cookieChangeObservers.find(host);
-            if (it == m_cookieChangeObservers.end())
-                return;
-            auto cookies = nsCookiesToCookieVector(addedCookies, [](NSHTTPCookie *cookie) { return !cookie.HTTPOnly; });
-            if (cookies.isEmpty())
-                return;
-            for (auto* observer : it->value)
-                observer->cookiesAdded(host, cookies);
-        } onQueue:dispatch_get_main_queue()];
-    } else {
-        // Old SPI.
-        // FIXME: This could can be removed after a while. It is only kept to ensure a smooth transition to the new SPI.
-        [nsCookieStorage() _setCookiesAddedHandler:^(NSArray<NSHTTPCookie *> * nsCookies, NSURL *urlForAddedCookies) {
-            auto cookies = nsCookiesToCookieVector(nsCookies, [](NSHTTPCookie *cookie) { return !cookie.HTTPOnly; });
-            if (cookies.isEmpty())
-                return;
-            auto host = URL(urlForAddedCookies).host().toString();
-            RELEASE_ASSERT(!host.isNull());
-            // FIXME: This is inefficient. Unfortunately, CFNetwork sends us notifications for hosts that do not match exactly the ones we
-            // are listening for (e.g. 'secure.hulu.com instead of 'www.hulu.com' for). See <rdar://problem/59973630>.
-            auto registrableDomain = RegistrableDomain::uncheckedCreateFromHost(host);
-            for (auto& pair : m_cookieChangeObservers) {
-                if (RegistrableDomain::uncheckedCreateFromHost(pair.key) == registrableDomain) {
-                    for (auto* observer : pair.value)
-                        observer->cookiesAdded(pair.key, cookies);
-                }
-            }
-        } onQueue:dispatch_get_main_queue()];
-    }
+    [nsCookieStorage() _setCookiesChangedHandler:^(NSArray<NSHTTPCookie*>* addedCookies, NSString* domainForChangedCookie) {
+        String host = domainForChangedCookie;
+        auto it = m_cookieChangeObservers.find(host);
+        if (it == m_cookieChangeObservers.end())
+            return;
+        auto cookies = nsCookiesToCookieVector(addedCookies, [](NSHTTPCookie *cookie) { return !cookie.HTTPOnly; });
+        if (cookies.isEmpty())
+            return;
+        for (auto* observer : it->value)
+            observer->cookiesAdded(host, cookies);
+    } onQueue:dispatch_get_main_queue()];
 
-    if ([nsCookieStorage() respondsToSelector:@selector(_setCookiesRemovedHandler:onQueue:)]) {
-        [nsCookieStorage() _setCookiesRemovedHandler:^(NSArray<NSHTTPCookie*>* removedCookies, NSString* domainForRemovedCookies, bool removeAllCookies)
-        {
-            if (removeAllCookies) {
-                for (auto& observers : m_cookieChangeObservers.values()) {
-                    for (auto* observer : observers)
-                        observer->allCookiesDeleted();
-                }
-                return;
-            }
-
-            String host = domainForRemovedCookies;
-            auto it = m_cookieChangeObservers.find(host);
-            if (it == m_cookieChangeObservers.end())
-                return;
-
-            auto cookies = nsCookiesToCookieVector(removedCookies, [](NSHTTPCookie *cookie) { return !cookie.HTTPOnly; });
-            if (cookies.isEmpty())
-                return;
-            for (auto* observer : it->value)
-                observer->cookiesDeleted(host, cookies);
-        } onQueue:dispatch_get_main_queue()];
-    } else {
-        // Old SPI.
-        // FIXME: This could can be removed after a while. It is only kept to ensure a smooth transition to the new SPI.
-        [nsCookieStorage() _setCookiesDeletedHandler:^(NSArray<NSHTTPCookie *> *, bool /*deletedAllCookies*/) {
+    [nsCookieStorage() _setCookiesRemovedHandler:^(NSArray<NSHTTPCookie*>* removedCookies, NSString* domainForRemovedCookies, bool removeAllCookies)
+    {
+        if (removeAllCookies) {
             for (auto& observers : m_cookieChangeObservers.values()) {
                 for (auto* observer : observers)
                     observer->allCookiesDeleted();
             }
-        } onQueue:dispatch_get_main_queue()];
-    }
+            return;
+        }
+
+        String host = domainForRemovedCookies;
+        auto it = m_cookieChangeObservers.find(host);
+        if (it == m_cookieChangeObservers.end())
+            return;
+
+        auto cookies = nsCookiesToCookieVector(removedCookies, [](NSHTTPCookie *cookie) { return !cookie.HTTPOnly; });
+        if (cookies.isEmpty())
+            return;
+        for (auto* observer : it->value)
+            observer->cookiesDeleted(host, cookies);
+    } onQueue:dispatch_get_main_queue()];
 }
 
 void NetworkStorageSession::unregisterCookieChangeListenersIfNecessary()
@@ -689,16 +657,8 @@ void NetworkStorageSession::unregisterCookieChangeListenersIfNecessary()
     if (!m_didRegisterCookieListeners)
         return;
 
-    if ([nsCookieStorage() respondsToSelector:@selector(_setCookiesChangedHandler:onQueue:)])
-        [nsCookieStorage() _setCookiesChangedHandler:nil onQueue:nil];
-    else
-        [nsCookieStorage() _setCookiesAddedHandler:nil onQueue:nil]; // Old SPI.
-
-    if ([nsCookieStorage() respondsToSelector:@selector(_setCookiesRemovedHandler:onQueue:)])
-        [nsCookieStorage() _setCookiesRemovedHandler:nil onQueue:nil];
-    else
-        [nsCookieStorage() _setCookiesDeletedHandler:nil onQueue:nil]; // Old SPI.
-
+    [nsCookieStorage() _setCookiesChangedHandler:nil onQueue:nil];
+    [nsCookieStorage() _setCookiesRemovedHandler:nil onQueue:nil];
     [nsCookieStorage() _setSubscribedDomainsForCookieChanges:nil];
     m_didRegisterCookieListeners = false;
 }
