@@ -1,3 +1,12 @@
+2020-05-04  Chris Dumez  <cdumez@apple.com>
+
+        Drop code path using the legacy CFNetwork cookie change notification SPI
+        https://bugs.webkit.org/show_bug.cgi?id=211411
+
+        Reviewed by John Wilander.
+
+        * pal/spi/cf/CFNetworkSPI.h:
+
 2020-05-04  Darin Adler  <darin@apple.com>
 
         Remove unneeded USE(MEDIAREMOTE)
