@@ -1,3 +1,14 @@
+2020-05-04  Chris Dumez  <cdumez@apple.com>
+
+        Drop code path using the legacy CFNetwork cookie change notification SPI
+        https://bugs.webkit.org/show_bug.cgi?id=211411
+
+        Reviewed by John Wilander.
+
+        * platform/network/cocoa/NetworkStorageSessionCocoa.mm:
+        (WebCore::NetworkStorageSession::registerCookieChangeListenersIfNecessary):
+        (WebCore::NetworkStorageSession::unregisterCookieChangeListenersIfNecessary):
+
 2020-05-04  Jack Lee  <shihchieh_lee@apple.com>
 
         Nullptr crash in CompositeEditCommand::moveParagraphs when changing style on elements that are
